data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3283.wast
;; 2. **Test 2: Call with Insufficient Arguments**    - Create a test case where a function call is made with fewer arguments than are required by the called function's signature.    - **Specific Constraint**: This checks whether the stack properly handles underflow and how errors are presented, ensuring incorrect calls lead to 'unreachable' instructions or proper error handling.    - **Test Relation**: Incorrect stack manipulation could lead to an erroneous function call and potentially trigger an 'unreachable' instruction upon function invocation.

(assert_invalid
  (module
    (func $insufficient-args
      (call 1 (i32.const 1))
    )
    (func (param i32 i32))
  )
  "type mismatch"
)